2008-09-15  Alexander Fehr  <pizzapunk gmail com>

  * sonata-1.5.3-1:
  New upstream release.
  New maintainer.
  Replaced install file with optdepends.
  Added ChangeLog.