@@ -1,11 +1,10 @@
 # $Id$
-# Maintainer: James Rayner <james@archlinux.org>
 # Maintainer: Alexander Fehr <pizzapunk gmail com>
 # Contributor: William Rea <sillywilly@gmail.com>
 
 pkgname=sonata
-pkgver=1.5.3
-pkgrel=2
+pkgver=1.6
+pkgrel=1
 pkgdesc="Elegant GTK+ music client for MPD"
 arch=('i686' 'x86_64')
 url="http://sonata.berlios.de/"
@@ -16,11 +15,10 @@ optdepends=('gnome-python-extras: Enhanced system tray support'
             'zsi: Lyrics fetching support'
             'dbus-python: Various extra functionality (e.g. multimedia keys support)')
 source=(http://download.berlios.de/sonata/sonata-$pkgver.tar.bz2)
-md5sums=('447e46f24005de797ebc11131db1bd82')
+md5sums=('219df8fa0b15df7e912b1bc48c34d8be')
 
 build() {
   cd "$srcdir/sonata-$pkgver"
-  chmod -R -x * || return 1
 
   python setup.py install --prefix=/usr --root="$pkgdir" || return 1
 }
