@@ -1,3 +1,8 @@
+2009-03-30  Alexander Fehr  <pizzapunk gmail com>
+
+  * sonata-1.6-1:
+  New upstream release.
+
 2008-09-15  Alexander Fehr  <pizzapunk gmail com>
 
   * sonata-1.5.3-1:
